@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.211 2006/01/03 02:05:42 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.212 2006/01/05 01:16:08 allanonjl Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
 
+  4 Jan 2006; John N. Laliberte <allanonjl@gentoo.org>
+  Timezone.py: fix loading of timezones from installprofile
+  due to race condition.
+  
   2 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
   fix to hopefully auto-scroll properly
   scroll to bottom of output tab on failure
